--- a/_config/site.yml
+++ b/_config/site.yml
@@ -1,4 +1,20 @@
-name: Project Name
-title: Baked with Awestruct
-org: Organization
+name: uml-toolkit
+title: uml-toolkit
+org: Derrick Ampy
+author: Derrick Ampy
+author_url: https://github.com/dsampy
 base_url: ''
+ctx_path: ''
+interpolate: false 
+haml:
+  :ugly: true
+asciidoctor:
+  :safe: safe
+  :attributes:
+    sitename: uml-toolkit
+    base_url: ''
+    ctx_path: ''
+    idprefix: ''
+    idseparator: '-'
+    sectanchors: ''
+    icons: font
