--- a/_config/site.yml
+++ b/_config/site.yml
@@ -18,3 +18,17 @@ asciidoctor:
     idseparator: '-'
     sectanchors: ''
     icons: font
+profiles:
+  development:
+    deploy: nil 
+  production:
+    base_url: http://dsampy.github.io/uml-toolkit-site
+    ctx_path: /uml-toolkit-site
+    asciidoctor:
+      :attributes:
+        base_url: http://dsampy.github.io/uml-toolkit-site
+        ctx_path: /uml-toolkit-site
+        imagesdir: http://dsampy.github.io/uml-toolkit-site/images 
+    deploy:
+      host: github_pages
+      branch: gh-pages
